--- a/package.json
+++ b/package.json
@@ -10,9 +10,23 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.16.9",
     "@astrojs/mdx": "^0.19.1",
     "@astrojs/rss": "^2.4.1",
     "@astrojs/sitemap": "^1.3.0",
-    "astro": "^2.4.1"
+    "@astrojs/tailwind": "^3.1.3",
+    "@fontsource-variable/inter": "^5.0.1",
+    "@fontsource-variable/jetbrains-mono": "^5.0.2",
+    "astro": "^2.5.5",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
+    "prettier": "^2.8.8",
+    "prettier-plugin-astro": "^0.9.0",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5"
   }
 }
