--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@fontsource-variable/inter": "^5.0.1",
     "@fontsource-variable/jetbrains-mono": "^5.0.2",
     "astro": "^2.5.5",
+    "rehype-katex": "^6.0.3",
+    "remark-math": "^5.1.1",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
