--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^3.1.1",
+    "@astrojs/partytown": "^2.1.1",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/inter": "^5.0.1",
     "@fontsource-variable/jetbrains-mono": "^5.0.2",
+    "@playform/compress": "^0.0.13",
     "astro": "^4.11.0",
+    "astro-seo": "^0.8.4",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
     "tailwindcss": "^3.0.24"
