--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.1.2",
-    "@astrojs/partytown": "^2.1.1",
-    "@astrojs/rss": "^4.0.7",
-    "@astrojs/sitemap": "^3.1.6",
-    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/mdx": "^4.0.3",
+    "@astrojs/partytown": "^2.1.2",
+    "@astrojs/react": "^4.1.2",
+    "@astrojs/rss": "^4.0.10",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.4",
     "@fontsource-variable/inter": "^5.0.1",
     "@fontsource-variable/jetbrains-mono": "^5.0.2",
+    "@fontsource-variable/roboto-slab": "^5.1.1",
     "@playform/compress": "^0.0.13",
-    "astro": "^4.11.5",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "astro": "^5.1.1",
     "astro-seo": "^0.8.4",
+    "d3": "^7.9.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
     "tailwindcss": "^3.0.24"
