--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.0.3",
     "@astrojs/partytown": "^2.1.2",
-    "@astrojs/react": "^4.1.2",
+    "@astrojs/react": "^4.4.0",
     "@astrojs/rss": "^4.0.10",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.4",
@@ -20,16 +20,18 @@
     "@fontsource-variable/jetbrains-mono": "^5.0.2",
     "@fontsource-variable/roboto-slab": "^5.1.1",
     "@playform/compress": "^0.0.13",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.2.1",
+    "@types/react-dom": "^19.2.0",
     "astro": "^5.1.1",
     "astro-seo": "^0.8.4",
     "d3": "^7.9.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "motion": "^12.23.22",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "class-variance-authority": "^0.6.0",
