--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.0.3",
-    "@astrojs/partytown": "^2.1.2",
+    "@astrojs/mdx": "^4.3.6",
+    "@astrojs/partytown": "^2.1.4",
     "@astrojs/react": "^4.4.0",
-    "@astrojs/rss": "^4.0.10",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/rss": "^4.0.12",
+    "@astrojs/sitemap": "^3.6.0",
     "@fontsource-variable/inter": "^5.0.1",
     "@fontsource-variable/jetbrains-mono": "^5.0.2",
     "@fontsource-variable/roboto-slab": "^5.1.1",
     "@playform/compress": "^0.0.13",
+    "@tailwindcss/vite": "^4.1.14",
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.0",
-    "astro": "^5.1.1",
+    "astro": "^5.14.1",
     "astro-seo": "^0.8.4",
     "d3": "^7.9.0",
     "motion": "^12.23.22",
@@ -30,7 +30,7 @@
     "react-dom": "^19.2.0",
     "rehype-katex": "^7.0.0",
     "remark-math": "^6.0.0",
-    "tailwindcss": "^3.0.24",
+    "tailwindcss": "^4.1.14",
     "three": "^0.179.1"
   },
   "devDependencies": {
@@ -38,7 +38,7 @@
     "clsx": "^1.2.1",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.9.0",
-    "prettier-plugin-tailwindcss": "^0.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5"
   }
